# PyFlytMenagerie

./: pyproject.toml  readme.md  setup.py
PyFlytMenagerie/: __init__.py
PyFlytMenagerie/revtriplane/: main.py  revtriplane.py
PyFlytMenagerie/revtriplane/revtriplane/: revtriplane.urdf  revtriplane.yaml
